--- a/ProgrammerDvorakFiQwerty.bundle/Contents/Info.plist
+++ b/ProgrammerDvorakFiQwerty.bundle/Contents/Info.plist
@@ -5,13 +5,15 @@
 	<key>CFBundleIdentifier</key>
 	<string>org.sil.ukelele.keyboardlayout.dvorak</string>
 	<key>CFBundleName</key>
-	<string>Programmer Dvorak - QWERTY</string>
+	<string>ProgrammerDvorakFiQwerty</string>
 	<key>CFBundleVersion</key>
-	<string>1.0.0</string>
-	<key>KLInfo_ProgrammerDvorakQWERTY</key>
+	<string>1.0.2</string>
+	<key>KLInfo_ProgrammerDvorakFiQWERTY</key>
 	<dict>
+		<key>TICapsLockLanguageSwitchCapable</key>
+		<false/>
 		<key>TISInputSourceID</key>
-		<string>org.sil.ukelele.keyboardlayout.dvorak.programmerdvorakqwerty</string>
+		<string>org.sil.ukelele.keyboardlayout.dvorak.programmerdvorakfiqwerty</string>
 		<key>TISIntendedLanguage</key>
 		<string>en-US</string>
 	</dict>
