--- a/ProgrammerDvorakFiQwerty.bundle/Contents/version.plist
+++ b/ProgrammerDvorakFiQwerty.bundle/Contents/version.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>BuildVersion</key>
-	<string>1.0.0</string>
+	<string>1.0.2</string>
 	<key>ProjectName</key>
-	<string>Programmer Dvorak - QWERTY</string>
+	<string>ProgrammerDvorakFiQwerty</string>
 	<key>SourceVersion</key>
 	<string>1</string>
 </dict>
